--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.10.0",
     "sort-by": "^0.0.2"
   },
