refactoring major code in anime watch video, add some fitur

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_URL='https://gogoanime-production-b46a.up.railway.app'
+VITE_URL=https://gogoanime-production-b46a.up.railway.app
+# VITE_URL=http://localhost:3000
